2 cams working, multiprocessing

--- a/quanapp/templates/dashboard.html
+++ b/quanapp/templates/dashboard.html
@@ -73,7 +73,7 @@
                         <!-- <img src="/static/background.png" alt="Realtime video"> -->
                     </div>
                     <div class="col-3">
-                        <!-- <img src="{{ url_for('video_feed2') }}" alt="Realtime video of site"> -->
+                        <img src="{{ url_for('video_feed2') }}" alt="Realtime video of site">
                         <!-- <h4>Risks: PPE Violation<span>  .</span></h4>
                         <h4>Severity: Medium<span>  .</span></h4>
                         <h4>Training: Required<span>  .</span></h4>
